Inserted content on ramen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Cocoa - An Odin Project Recipes Website</h1>
-    
+    <a href="recipes/ramen.html">Ramen</a>
 </body>
 </html>
