Initialized coffee and pudding recipes. Updated index to match them.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Cocoa - An Odin Project Recipes Website</h1>
     <a href="recipes/ramen.html">Ramen</a>
+    <a href="recipes/pudding.html">Pudding</a>
+    <a href="recipes/coffee.html">Coffee</a>
 </body>
 </html>
