--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes Project</title>
-</head>
-<body>
-    <h1>Cocoa - An Odin Project Recipes Website</h1>
-    <a href="recipes/ramen.html">Ramen</a>
-    <a href="recipes/pudding.html">Pudding</a>
-    <a href="recipes/coffee.html">Coffee</a>
-</body>
+    <link rel="stylesheet" href="/stylesheets/stylemain.css" />
+    <link rel="stylesheet" href="/stylesheets/fonts.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=DotGothic16&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="stylesheets/univstyles.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="dotgothic16-regular">
+        Cocoa - An Odin Project Recipes Website
+      </h1>
+      <ul class="navlist">
+        <li><a class="smalltext dotgothic16-regular" href="recipes/ramen.html">Ramen</a></li>
+        <li><a class="smalltext dotgothic16-regular" href="recipes/pudding.html">Pudding</a></li>
+        <li><a class="smalltext dotgothic16-regular" href="recipes/coffee.html">Coffee</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
