--- a/index.html
+++ b/index.html
@@ -12,17 +12,29 @@
       href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=DotGothic16&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="stylesheets/univstyles.css">
+    <link rel="stylesheet" href="stylesheets/univstyles.css" />
   </head>
   <body>
     <div class="container">
-      <h1 class="dotgothic16-regular">
-        Cocoa - An Odin Project Recipes Website
+      <h1 class="dotgothic16-regular title">
+        <a href="index.html">An Odin Project Recipes Website</a>
       </h1>
       <ul class="navlist">
-        <li><a class="smalltext dotgothic16-regular" href="recipes/ramen.html">Ramen</a></li>
-        <li><a class="smalltext dotgothic16-regular" href="recipes/pudding.html">Pudding</a></li>
-        <li><a class="smalltext dotgothic16-regular" href="recipes/coffee.html">Coffee</a></li>
+        <li>
+          <a class="navitem dotgothic16-regular" href="recipes/ramen.html"
+            >Ramen</a
+          >
+        </li>
+        <li>
+          <a class="navitem dotgothic16-regular" href="recipes/pudding.html"
+            >Pudding</a
+          >
+        </li>
+        <li>
+          <a class="navitem dotgothic16-regular" href="recipes/coffee.html"
+            >Coffee</a
+          >
+        </li>
       </ul>
     </div>
   </body>
